Fixed up CSS/HTML on Login Screen
Theres still a problem on the centering of the unordered list. Feel free
to try and center it. Otherwise I've looked at this on iPhone, Android,
and even an iPad. Landscape mode's background image looks off on Android
but fine on iPad and iPhone.

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -20,107 +20,89 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
-body {
-    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
-    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
-    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#E4E4E4;
-    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-gradient(
-        linear,
-        left top,
-        left bottom,
-        color-stop(0, #A7A7A7),
-        color-stop(0.51, #f2edf2)
-    );
-    background-attachment:fixed;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-    font-size:20px;
-    height:100%;
-    margin:0px;
-    padding:0px;
-    text-transform:uppercase;
-    width:100%;
+body 
+{
+    -webkit-touch-callout: none;
+    -webkit-text-size-adjust: none;
+    -webkit-user-select: none;
+    background-color: #E4E4E4;
+    background-image: linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image: -webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image: -ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image: -webkit-gradient( linear, left top, left bottom, color-stop(0, #A7A7A7), color-stop(0.51, #f2edf2) );
+    background-attachment: fixed;
+    font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-size: 20px;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
 }
-
-/* Portrait layout (default) */
-.app {
-    background:url(../img/logicbroker_logo.jpg) no-repeat center top; /* 170px x 200px */
-    position: fixed;              /* position in the center of the screen */
-    left:21%;
-    top:25%;
-    height:400px;                   /* text area height */
-    width:225px;                   /* text area width */
-    text-align:center;
-    padding:180px 180px 180px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
-}
-
-/* Landscape layout (with min-width) */
-@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
-    .app {
-        background-position:left center;
-        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
-        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
-                                      /* offset horizontal: half of image width and text area width */
+/*@media all and (orientation: portrait)*/
+ 
+    .app img 
+    {
+        /*This centers the image dynamically*/
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        /*This dynamically keeps the image the same size*/
+        height: auto;
+        width: auto;
     }
-}
 
-h1 {
-    position: fixed;
-    top: 325px;
-    right: 70px;
-    font:35px verdana;
-    color: red;
-    text-transform: capitalize;
-    font-weight:normal;
-    font-style: italic;
-    margin:10px;
-    overflow:visible;
-    text-align: center;
-}
+    #LogIn 
+    {
+        position: relative;
+        top: 20px;
+        text-align: center;
+    }
+    .inputField
+    {
+        margin:5px
+    }
 
-textFields {
-    position: fixed;
-    top: 66%;
-    right: 70px;
-    text-transform: lowercase;
-}
+    .inputField label
+    {
+        display:block;
+        width:inherit;
+    }
+    .submit input
+    {
+        margin: 10px
+    }
+    h1 
+    {
+        font:35px verdana;
+        color: red;
+        font-weight:bold;    
+    }
+    .help
+    {
+        font-size: 18px;
+        width: 75%;
+        margin-top: 30px;
+        margin-left: auto;
+        margin-right: auto;        
+    }
+    .help ul
+    {
+        list-style-type: square;
+        display: table;
+        color: red;
+    }
 
-logIn {
-    position: fixed;
-    top: 387px;
-    right: 10px;
-    text-transform: lowercase;
-}
-questions {
-    position: fixed;
-    top: 425px;
-    right: 20px;
-    text-transform: lowercase;
-    color:red;
-}
-.event {
-    border-radius:4px;
-    -webkit-border-radius:4px;
-    color:#FFFFFF;
-    font-size:12px;
-    margin:0px 30px;
-    padding:2px 0px;
-}
+    .event.listening 
+    {
+        background-color: #333333;
+        display: block;
+    }
 
-.event.listening {
-    background-color:#333333;
-    display:block;
-}
-
-.event.received {
-    background-color:#4B946A;
-    display:none;
-}
+    .event.received
+     {
+        background-color: #4B946A;
+        display: none;
+     }
 
 @keyframes fade {
     from { opacity: 1.0; }
@@ -134,7 +116,3 @@ questions {
     to { opacity: 1.0; }
 }
  
-.blink {
-    animation:fade 3000ms infinite;
-    -webkit-animation:fade 3000ms infinite;
-}
